chore: use ports for communication

--- a/manifest.json
+++ b/manifest.json
@@ -11,13 +11,15 @@
   },
   "permissions": [],
   "devtools_page": "devtools.html",
+  // https://stackoverflow.com/questions/75043889/manifest-v3-background-scripts-service-worker-on-firefox
   "background": {
-    "scripts": ["/dist/background.js"]
+    // for chrome
+    "service_worker": "/dist/service-worker.js",
+    // for firefox
+    "scripts": ["/dist/service-worker.js"]
   },
   "content_scripts": [{
     "matches": ["<all_urls>"],
-    "js": ["/dist/content-script.js"],
-    "run_at": "document_idle",
-    "all_frames": true
+    "js": ["/dist/content-script.js"]
   }]
 }
