--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   },
   "devDependencies": {
     "@types/chrome": "^0.0.268",
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "aegir": "^42.2.11",
     "web-ext": "^7.11.0"
   }
